#544 upgrade to java 11/prettier